--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,26 @@ body {
 
   background: #f5f5f5;
 }
+
+.image {
+  width: 100%;
+  max-width: 250px;
+  height: auto;
+}
+
+/* react18/suspense */
+.container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: "." ".";
+}
+
+.row {
+  display: flex;
+  text-align: center;
+}
+
+.column {
+  flex: 50%;
+}
